# ML-MLOps-Portfolio

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  APLICACION_AUDITORIAS.md  CHANGELOG.md  CHECKLIST_PENDIENTES.md  CHECKLIST_RELEASE.md  CONTRIBUTING.md  FINAL_PORTFOLIO_STATUS.md  FINAL_SUMMARY.md  IMPLEMENTACION_FINAL.md  MEJORAS_CI_PROYECTOS.md  OPTIMIZATION_COMPLETE.md  PORTFOLIO_DELIVERABLES.md  PORTFOLIO_IMPROVEMENTS_FINAL.md  PROJECT_TEMPLATE.md  QUICK_START.md  QUICK_START_GUIDE.md  README.md  REFACTORING_SUMMARY.md  RESUMEN_COMPLETO_OPTIMIZACION.md  RESUMEN_CORRECCIONES.md  RUNBOOK.md  SCRIPTS_ANALISIS.md  docker-compose.demo.yml  mkdocs.yml  requirements-docs.txt  validate_refactoring.sh
.github/: dependabot.yml  security_scan.yml
BankChurn-Predictor/: .dockerignore  ARCHITECTURE.md  CHECKLIST.md  DATA_LICENSE  Dockerfile  Makefile  OPERATIONS.md  README.md  docker-compose.demo.yml  dvc.yaml  fairness_metrics.json  main.py  metrics.json  model_card.md  params.yaml  pyproject.toml  requirements.in  requirements.txt
BankChurn-Predictor/.github/workflows/: enhanced-ci.yml
BankChurn-Predictor/app/: __init__.py  example_load.py  fastapi_app.py
BankChurn-Predictor/configs/: config.yaml
BankChurn-Predictor/data/: preprocess.py  validate_data.py
BankChurn-Predictor/docs/: ONE-PAGER.md  architecture.md  training_pipeline.md
BankChurn-Predictor/docs/_per_file/: Dockerfile.md  Makefile.md  ci-mlops.yml.md  ci_mlops.md  dvc.yaml.md  fastapi_app.md  prediction.md  prediction.py.md  preprocess.py.md  training.md  training.py.md
BankChurn-Predictor/docs/_templates/: ARCHITECTURE.md.template  OPERATIONS.md.template  README.md.template
BankChurn-Predictor/models/: best_model_metadata.json  model_card.md
BankChurn-Predictor/monitoring/: check_drift.py  drift_detection.py
BankChurn-Predictor/notebooks/: demo.ipynb
BankChurn-Predictor/results/: training_results.json
BankChurn-Predictor/scripts/: generate_docs_from_template.py  run_mlflow.py
BankChurn-Predictor/src/: __init__.py
BankChurn-Predictor/src/bankchurn/: __init__.py  cli.py  config.py  evaluation.py  explainability.py  models.py  prediction.py  training.py
BankChurn-Predictor/tests/: conftest.py  test_api_coverage.py  test_cli.py  test_cli_basic.py  test_cli_complete.py  test_comprehensive_boost.py  test_config.py  test_evaluation.py  test_evaluation_complete.py  test_explainability.py  test_fairness.py  test_final_coverage_push.py  test_integration.py  test_main_cli.py  test_model.py  test_models.py  test_modules_import.py  test_pragmatic_coverage.py  test_prediction.py  test_prediction_complete.py  test_training.py  test_training_specific.py
CarVision-Market-Intelligence/: .flake8  ARCHITECTURE.md  CHECKLIST.md  Dockerfile  Makefile  OPERATIONS.md  README.md  data_card.md  docker-compose.demo.yml  evaluate.py  main.py  model_card.md  pyproject.toml  requirements.in  requirements.txt
Chicago-Mobility-Analytics/: README.md  main.py
Gaming-Market-Intelligence/: README.md  main.py
GoldRecovery-Process-Optimizer/: README.md  main.py
OilWell-Location-Optimizer/: README.md  evaluate.py
Reportes Portafolio/: 00_Index-Reportes.md  BankChurn-Predictor-Reporte.md  CarVision-Market-Intelligence-Reporte.md  Global-Code-Quality-Report.md  Security-Audit-Remediation.md  Security-Dependency-Report.md  TelecomAI-Customer-Intelligence-Reporte.md  baseline_metrics_deep_refactor.md  code_review_auditoria.md  codebase_cleanup_auditoria.md  deep_refactor_audit_20251125_en.md  refactor_auditoria.md  (+2 more)
TelecomAI-Customer-Intelligence/: .coveragerc  .dockerignore  ARCHITECTURE.md  CHECKLIST.md  Dockerfile  Makefile  OPERATIONS.md  README.md  data_card.md  docker-compose.demo.yml  evaluate.py  main.py  model_card.md  pyproject.toml  requirements.in  requirements.txt
TelecomAI-Customer-Intelligence/app/: example_load.py  fastapi_app.py
TelecomAI-Customer-Intelligence/artifacts/: model.joblib  preprocessor.joblib
TelecomAI-Customer-Intelligence/configs/: config.yaml
TelecomAI-Customer-Intelligence/data/: preprocess.py  validate_data.py
TelecomAI-Customer-Intelligence/docs/: ARCHITECTURE.md  DOCS_TEMPLATE.md  ONE-PAGER.md  OPERATIONS.md
TelecomAI-Customer-Intelligence/docs/_per_file/: ci_mlops.md  config.md  dockerfile_doc.md  fastapi_app.md  training.md
TelecomAI-Customer-Intelligence/mlruns/0/: meta.yaml
TelecomAI-Customer-Intelligence/mlruns/585180428180994306/: meta.yaml
TelecomAI-Customer-Intelligence/mlruns/585180428180994306/d80dc05a11724407b7aa21b450231810/: meta.yaml
TelecomAI-Customer-Intelligence/mlruns/585180428180994306/d80dc05a11724407b7aa21b450231810/artifacts/: metrics.json
TelecomAI-Customer-Intelligence/mlruns/585180428180994306/d80dc05a11724407b7aa21b450231810/metrics/: accuracy  f1  precision  recall  roc_auc
TelecomAI-Customer-Intelligence/mlruns/585180428180994306/d80dc05a11724407b7aa21b450231810/tags/: mlflow.source.name
TelecomAI-Customer-Intelligence/models/: model_card.md  model_v1.0.0.pkl
TelecomAI-Customer-Intelligence/monitoring/: check_drift.py
TelecomAI-Customer-Intelligence/notebooks/: README.md  demo.ipynb
TelecomAI-Customer-Intelligence/scripts/: generate_docs_from_template.py  run_experiments.py  run_mlflow.py
TelecomAI-Customer-Intelligence/src/telecom/: __init__.py  config.py  data.py  evaluation.py  prediction.py  training.py
TelecomAI-Customer-Intelligence/tests/: test_api_e2e.py  test_data.py  test_main_workflow.py  test_model.py  test_model_logic.py  test_preprocess_and_evaluate_utils.py
(+252 files in other folders)
