[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bankchurn-predictor"
version = "1.0.0"
description = "Bank customer churn prediction with ensemble models and fairness analysis"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Daniel Duque", email = "daniel.duque@example.com"}
]
keywords = ["machine-learning", "churn-prediction", "classification", "mlops"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "joblib>=1.1.0",
    "pyyaml>=6.0",
    "fastapi>=0.78.0",
    "uvicorn>=0.18.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.5",
    "typing-extensions>=4.0.0",
    "imbalanced-learn>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
ml = [
    "optuna>=3.0.0",
    "mlflow>=2.0.0",
    "dvc>=2.0.0",
]
monitoring = [
    "evidently>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/DuqueOM/Portafolio-ML-MLOps"
Repository = "https://github.com/DuqueOM/Portafolio-ML-MLOps"
Documentation = "https://github.com/DuqueOM/Portafolio-ML-MLOps/tree/main/BankChurn-Predictor"

[project.scripts]
bankchurn = "main:main"

[tool.setuptools]
packages = ["app", "data", "monitoring", "scripts"]

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | venv
  | __pycache__
  | \.pytest_cache
  | \.mypy_cache
  | data
  | artifacts
  | mlruns
)/
'''

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true
extend_skip_glob = ["data/*", "artifacts/*", "mlruns/*"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=79",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[[tool.mypy.overrides]]
module = ["pandas.*", "numpy.*", "sklearn.*", "optuna.*", "mlflow.*"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "test_*.py",
    ".venv/*",
    "venv/*",
    "setup.py",
    "data/validate_data.py",
    # Optional module with external dependency (SHAP)
    "src/bankchurn/explainability.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if False:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
